<resources>
    <string name="app_name">TMDBMovieAppXML</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="login">Login</string>
    <string name="in_order_to_continue_please_log_in">In order to continue please log in</string>
    <string name="top_right_illus">Top Right Illus</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_and_password_are_valid">Username and Password are valid.</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing, get it?</string>
    <string name="background">background</string>
    <string name="recyclerview_for_movies">RecyclerView For Movies</string>
    <string name="movies_poster">Movies Poster</string>
    <string name="movies_second">Movies</string>
    <string name="description">Description</string>
    <string name="top_rated_movies_second">Top Rated Movies</string>
    <string name="movie_main_title">Movie Main Title</string>
    <string name="movie_main_title_title">Movie Main Title</string>
    <string name="tabs_for_viewpager">Tabs for viewPager</string>
    <string name="godfather_overview">Spanning the years 1945 to 1955, a chronicle of the fictional Italian-American Corleone crime family. When organized crime family patriarch, Vito Corleone barely survives an attempt on his life, his youngest son, Michael steps in to take care of the would-be killers, launching a campaign of bloody revenge.</string>
    <string name="_3_5">3.5</string>
    <string name="rate_this_movie">Rate This Movie</string>
    <string name="add_your_rating">Add your rating</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="submit_rating_button">Submit Rating</string>
    <string name="profile_picture">Profile picture</string>
    <string name="director_of_photography">Director of Photography</string>
    <string name="krzysztof_kie_lowski">Krzysztof Kieślowski</string>
    <string name="_0_6">0.6</string>
    <string name="rv_for_credits">RV for credits</string>
    <string name="show_cast_members">Show Cast Members</string>
    <string name="show_crew_members">Show Crew Members</string>
    <string name="ignore">Ignore</string>
    <string name="_3">3</string>
    <string name="username">username</string>
    <string name="comment">When you get a story written quite this magnificently it would take an extreme amateur to screw it up - and Francis Ford Coppola is no amateur. Marlon Brando, Al Pacino, James Caan and Robert Duvall represent the epitome of guile, sophistication, loyalty, honour and brutality in this self-adapted Mario Puzo story of the unambiguously ambitious Corleone family - they start with nothing and so the only way is up; however and whatever they need to do to get there. The characterisations are layered and colourful; Diane Keaton has no idea what she\'s getting herself into! John Cazale is great as the spineless brother Fredo too. Once again, Nino Rota pulls out all the stops to give this a score that helps cement this film\'s place as amongst the best ever made. My only criticism, and it is slight at that, is that the audio mix could have done with a bit of a boost. Much of the dialogue - especially from Brando - verges on the inaudible at times.</string>
    <string name="search_for_movies">Search For Movies...</string>
    <string name="your_favourite_movies">Your Favourite Movies</string>
    <string name="favourite_movies">Favourite Movies</string>
    <string name="search_for_movies2">Search for Movies</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="sorry_no_reviews_for_this_movie">Sorry, No Reviews for this movie. :(</string>
    <string name="empty_state">Empty State</string>
    <string name="show_crew_members2">Show Crew Members</string>
    <string name="sorry_there_is_no_record_for_this_movie">Sorry, There is no record for this movie :(</string>
</resources>