<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:maxHeight="356dp">

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/credit_pic"
        android:background="@drawable/rounded_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_picture"/>
    
    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
        android:text="@string/krzysztof_kie_lowski"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName"
        android:text="@string/director_of_photography"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="8dp"/>

    <RatingBar
        android:id="@+id/rbPopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvPosition"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:progressTint="#FFD700"
        android:progressBackgroundTint="#808080"
        android:isIndicator="true"
        android:numStars="1"
        android:stepSize="0.1"
        android:rating="0.6"/>

    <TextView
        android:id="@+id/tvPopularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rbPopularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="#FFD700"
        android:text="@string/_0_6"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>