<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.MoviesFragment">

    <TextView
        android:id="@+id/tvMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/top_rated_movies"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesRecycler"
        app:layout_constraintTop_toBottomOf="@id/tvMovies"
        android:layout_marginTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/movie_item"
        android:contentDescription="@string/recyclerview_for_movies"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/ivElipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/elipsa"
        android:visibility="gone"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/camera"
        android:visibility="gone"
        android:contentDescription="@string/background" />

    <TextView
        android:id="@+id/tvNoMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_shows_are_not_showing_get_it"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivElipse"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#808080"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>