<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/cast_picture"
            android:contentDescription="@string/ignore"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/full_star"
            android:layout_marginStart="344dp"
            android:layout_marginTop="35dp"
            android:contentDescription="@string/ignore"/>

        <TextView
            android:id="@+id/rating"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:text="@string/_3"
            android:textSize="15sp"
            android:layout_marginStart="324dp"
            android:layout_marginTop="34dp"
            android:textColor="#3d1d72"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#3d1d72"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="parent"
            android:layout_marginStart="95dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/comment"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:background="@color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="70dp"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>