<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:maxHeight="488dp">

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_your_rating"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="#3d1d72"
        android:progressBackgroundTint="#808080"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingText"
        android:contentDescription="@string/ignore"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddRating"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#3d1d72"
        app:cornerRadius="30dp"
        android:enabled="true"
        android:text="@string/submit_rating_button"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>